--- a/index.css
+++ b/index.css
@@ -1,16 +1,22 @@
 html,body{
 	margin:0px;
 	padding:0px;
-/*	width:100%;
-	height:100%;*/
-	width:1000px;
-	height:750px;
+	width:100%;
+	height:100%;
 	position:relative;
+}
+#status-bar{
+	height:20px;
+	width:1014px;
+	padding-left:10px;
+	background-color: #333;
+	color:#bbb;
+	font-weight: bolder;
 }
 #cover,#content{
 	position: absolute;
-	width:100%;
-	height:100%;
+	width:1024px;
+	height:748px;
 	overflow:hidden;
 }
 
@@ -28,7 +34,7 @@ html,body{
 	position: absolute;
 	top:50%;
 	font-size:72px;
-	margin-top:-20px;
+	margin-top:-40px;
 }
 
 #cover h1.shadow{
@@ -37,8 +43,8 @@ html,body{
 	position: absolute;
 	top:50%;
 	font-size:72px;
-	margin-top:-15px;
-	margin-left:50px;
+	margin-top:-30px;
+	margin-left:15px;
 	color:black;	
 	z-index: -1;
 }
@@ -61,7 +67,7 @@ html,body{
 
 
 .blog{
-	padding:5px;
+	/*padding:5px;*/
 	float:left;
 	background: pink;
 	overflow:hidden;
@@ -75,5 +81,3 @@ html,body{
 .blog > h2{
 	background: yellow;
 }
-
-
