--- a/index.css
+++ b/index.css
@@ -18,13 +18,12 @@ html,body{
 	width:1024px;
 	height:748px;
 	overflow:hidden;
+	background: #333;
 }
 
 #cover{
 	z-index:3;
-	background-color:red;
 	text-align: center;
-	background: #333;
 	color:#ddd;
 }
 
@@ -55,10 +54,10 @@ html,body{
 
 .page{
 	display:none;
-	background: green;
 	position:absolute;
 	width:100%;
 	height:100%;
+	background: #eee;
 }
 
 #page1{
@@ -66,18 +65,25 @@ html,body{
 }
 
 
-.blog{
+.blog-container{
 	/*padding:5px;*/
 	float:left;
-	background: pink;
 	overflow:hidden;
 }
 
-.blog.fullscreen{
-	position: absolute;
-	z-index: 100;
+.blog{
+	height:100%;
+	background: #eee;
+	padding:0 5px;
+	overflow:hidden;
+	border-right:1px dotted black;
+	border-bottom:1px dotted black;
 }
 
-.blog > h2{
-	background: yellow;
+.blog.fullscreen{
+	position:absolute;
+	left:0px;
+	top:0px;
+	overflow-y:scroll;
+	overflow-x:hidden;
 }
