--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 html,body{
 	margin:0px;
 	padding:0px;
-	width:100%;
-	height:100%;
+	/*width:100%;
+	height:100%;*/
 	position:relative;
+	width:1024px;
+	height:768px;
 }
 #status-bar{
 	height:20px;
@@ -86,4 +88,21 @@ html,body{
 	top:0px;
 	overflow-y:scroll;
 	overflow-x:hidden;
+}
+
+.blog.fullscreen.read{
+	opacity: 1;
+}
+.blog.read{
+	opacity: 0.5;
+}
+
+.bottom-bar{
+	display:none;
+	position: absolute;
+	bottom:0px;
+	height:30px;
+	width:100%;
+	z-index: 100;
+	background-color: green;
 }
